--- a/LiveMapDashboard.Web/Views/Home/Index.cshtml
+++ b/LiveMapDashboard.Web/Views/Home/Index.cshtml
@@ -75,7 +75,7 @@
                     'circle-radius': 5,
                     'circle-color': '#fff',
                     'circle-stroke-width': 2,
-                    'circle-stroke-color': '#f00'
+                    'circle-stroke-color': '#0f0'
                 }
             },
             {
@@ -83,7 +83,7 @@
                 'type': 'fill',
                 'filter': ['==', '$type', 'Polygon'],
                 'paint': {
-                    'fill-color': '#f00',
+                    'fill-color': '#0f0',
                     'fill-opacity': 0.4
                 }
             },
@@ -92,7 +92,7 @@
                 'type': 'line',
                 'filter': ['==', '$type', 'Polygon'],
                 'paint': {
-                    'line-color': '#f00',
+                    'line-color': '#0f0',
                     'line-width': 2,
                     'line-dasharray': ['literal', [2, 2]]
                 }
@@ -108,8 +108,6 @@
 
     function updateArea(e) {
         const data = draw.getAll();
-        console.log("Data: " + JSON.stringify(data));
-        console.log('Meow!');
 
         if (data.features.length > 0) {
             const area = turf.area(data);
@@ -117,6 +115,8 @@
             // restrict to area to 2 decimal points
             const roundedArea = Math.round(area * 100) / 100;
         }
+
+        onAreaChanged();
     }
 
     function onCreateArea(e) {
@@ -125,9 +125,36 @@
         if (data.features.length > 1) {
             draw.delete(data.features[data.features.length - 1].id);
         }
+
+        onAreaChanged();
+    }
+
+    function onAreaChanged() {
+        document.querySelector('.mapbox-gl-draw_ctrl-draw-btn.mapbox-gl-draw_polygon').disabled
+            = (draw.getAll().features.length > 0);
     }
 
     document.addEventListener('DOMContentLoaded', () => {
+        {
+            fetch("http://localhost:3000/coords", {
+                method: "GET",
+            })
+            .then(response => response.json())  // Parse the JSON response
+            .then(data => {
+                const newFeature = draw.add({
+                    type: 'Feature',
+                    properties: [],
+                    geometry: {
+                        type: 'Polygon',
+                        coordinates: data.coordinates
+                    }
+                });
+            })
+            .catch(error => {
+                console.error("Error:", error);
+            });
+        }
+
         document.querySelector('#saveMap').addEventListener('click', () => {
             const features = draw.getAll().features;
             if (features.length == 0) {
@@ -136,6 +163,21 @@
 
             // Save Map
             console.log(features[0]);
+            const coordinates = features[0].geometry.coordinates;
+
+            fetch("http://localhost:3000/coords", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify(coordinates)
+            })
+            .then(response => response.json())
+            .then(data => console.log("Success: ", data))
+            .catch(error => console.error("Error: ", error));
         });
     });
+
+    // Call on load
+    onAreaChanged();
 </script>
