--- a/LiveMapDashboard.Web/Views/Home/Index.cshtml
+++ b/LiveMapDashboard.Web/Views/Home/Index.cshtml
@@ -130,6 +130,7 @@
         .catch(error => {
             console.error("Error:", error);
         });
+        onAreaChanged();
     }
 
     function onCreateArea(e) {
