--- a/LiveMapDashboard.Web/Views/Home/Park.cshtml
+++ b/LiveMapDashboard.Web/Views/Home/Park.cshtml
@@ -34,6 +34,8 @@
     }
 </style>
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://www.unpkg.com/@@mapbox/mapbox-gl-draw@1.5.0/dist/mapbox-gl-draw.js"></script>
 <link rel="stylesheet"
       href="https://www.unpkg.com/@@mapbox/mapbox-gl-draw@1.5.0/dist/mapbox-gl-draw.css" />
@@ -72,8 +74,27 @@
 
         <div class="pt-3">
             <a href="#" class="btn btn-primary" id="saveMap">Opslaan</a>
-            <a href="#" class="btn btn-danger">Verwijderen</a>
             <a href="#" class="btn btn-primary" id="drawMap">Tekenen</a>
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+                Verwijderen
+            </button>
+
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        </div>
+                        <div class="modal-body">
+                            <h2>Verwijderen van area</h2>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-danger" data-dismiss="modal" id="confirmDelete">Verwijderen</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -233,6 +254,17 @@
                     console.error("Error:", error);
                 });
         }
+
+        document.getElementById("confirmDelete").addEventListener("click", function () {
+            const data = draw.getAll()
+
+            draw.delete(data.features[data.features.length - 1].id);
+
+            const modal = bootstrap.Modal.getInstance(document.getElementById('exampleModal'));
+            if (modal) {
+                modal.hide();
+            }
+        });
 
         document.querySelector('#saveMap').addEventListener('click', () => {
             const features = draw.getAll().features;
