--- a/LiveMapDashboard.Web/Views/Shared/_Layout.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/_Layout.cshtml
@@ -41,6 +41,8 @@
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
+
+        <div id="alertContainer"></div>
     </div>
 
     <footer class="border-top footer text-muted">
