--- a/LiveMapDashboard.Web/wwwroot/css/site.css
+++ b/LiveMapDashboard.Web/wwwroot/css/site.css
@@ -29,3 +29,22 @@ body {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
 }
+
+#alertContainer {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1050; /* Make sure the alert is above other content */
+}
+
+.alert {
+    margin-bottom: 10px;
+
+    opacity: 1;
+    transition: opacity 1s ease-out;
+}
+
+.fade-out {
+    opacity: 0;
+}
