console logs removed

--- a/LiveMapDashboard.Web/Views/Home/Park.cshtml
+++ b/LiveMapDashboard.Web/Views/Home/Park.cshtml
@@ -185,8 +185,7 @@
         })
             .then(response => response.json())
             .then(data => {
-
-                console.log("Data deleted:", data);
+                
             })
             .catch(error => {
                 showAlert('error', 'Kan park grenzen niet verwijderen.');
@@ -208,8 +207,6 @@
         const startDrawingBtn = document.querySelector('#drawMap');
     
         if (startDrawingBtn) {
-            console.log("disablin' time")
-
             // Disable the start drawing button if there are features drawn
             startDrawingBtn.disabled = (draw.getAll().features.length > 0);
             startDrawingBtn.style.pointerEvents = startDrawingBtn.disabled ? 'none' : 'auto'
@@ -282,7 +279,6 @@
             }
 
             // Save Map
-            console.log(features[0]);
             const coordinates = features[0].geometry.coordinates;
 
             fetch("http://localhost:3000/coords", {
@@ -293,7 +289,9 @@
                 body: JSON.stringify(coordinates)
             })
                 .then(response => response.json())
-                .then(data => console.log("Success: ", data))
+                .then(data => { 
+
+                })
                 .catch(error => {
                     showAlert('error', 'Kan park grenzen niet opslaan.');
                 });
@@ -304,7 +302,6 @@
         });
 
         document.querySelector('#submitGo').addEventListener('click', () => {
-            console.log(map.getCenter());
             try {
                 map.setCenter([
                 document.querySelector('#longitudeInput').value,
@@ -312,7 +309,6 @@
             ]);
             } catch (error) {
                 showAlert('warning', 'Coordinaten zijn niet geldig.');
-                console.log(error);
             }
         });
 
