--- a/LiveMapDashboard.Web/Views/Home/Park.cshtml
+++ b/LiveMapDashboard.Web/Views/Home/Park.cshtml
@@ -264,11 +264,12 @@
             if (data.features && data.features.length > 0) {
                 draw.delete(data.features[data.features.length - 1].id);
                 
+                document.activeElement.blur();
                 const modal = bootstrap.Modal.getInstance(document.getElementById('exampleModal'));
                 if (modal) {
                     modal.hide();
                 }
-                    onAreaChanged();
+                onAreaChanged();
             } else {
                 showAlert('error', 'Er zijn geen parkgrenzen om te verwijderen.');
             }
