--- a/LiveMapDashboard.Web/Views/Home/Park.cshtml
+++ b/LiveMapDashboard.Web/Views/Home/Park.cshtml
@@ -171,6 +171,9 @@
     map.on('draw.delete', onDeleteArea);
     map.on('draw.update', updateArea);
 
+    const parkId = '84573694-6cf8-e934-d914-b117e5934c22';
+    const poiApi = `http://localhost:7211/api/poi/${parkId}`;
+
     function updateArea(e) {
         const data = draw.getAll();
 
@@ -185,7 +188,7 @@
     }
 
     function onDeleteArea() {
-        fetch("http://localhost:3000/coords", {
+        fetch(`${poiApi}`, {
             method: "DELETE",
         })
             .then(response => response.json())
@@ -238,7 +241,7 @@
             document.querySelector('#latitudeInput').value = '51.6885178';
             document.querySelector('#longitudeInput').value = '5.2866805';
 
-            fetch("http://localhost:3000/coords", {
+            fetch(`${poiApi}`, {
                 method: "GET",
             })
                 .then(response => response.json())
@@ -284,7 +287,7 @@
             // Save Map
             const coordinates = features[0].geometry.coordinates;
 
-            fetch("http://localhost:3000/coords", {
+            fetch(`${poiApi}`, {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json"
